--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'CT'
 - !lcsh 'Women -- Biography -- Juvenile literature'
+- GITenberg
 tableOfContents: Saint Catherine, the girl of Siena -- Joan of Arc, the girl of Domremy
   -- Vittoria Colonna, the girl of Ischia -- Catherine de' Medici, the girl of mediæval
   Italy -- Lady Jane Grey, the girl of Tudor England -- Mary Queen of Scots, the girl
